--- a/src_backend/PetCareAppMVC/Features/Listings/MyListings.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Listings/MyListings.cshtml
@@ -19,10 +19,7 @@
           <div class="header__empty">
           </div>
           <div>
-            <a href="#home">person</a>
-            <a href="#home">listing</a>
-            <a href="#home">itd</a>
-            <a href="#home">itd</a>
+        
             <a href="#home">Pretraži</a>
               <a href="#news">Odjava</a>
             <div class="dropdown">
@@ -128,7 +125,7 @@ objJson.push({
         "adlisting descr": "@item.AdlistingDescription",
         "isactive": "@item.IsActiv",
         "price": "@item.Price",
-        "title": "@item.Title",
+        "Broj telefona": "@item.Title",
         "petid": "@item.PetId",
         "petname": "@item.PetName",
         "adress": "@item.Adress1",
