--- a/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
@@ -83,6 +83,8 @@
                          
                                   @foreach (var item in Model)
       {
+          <script>console.log("@item.Title")</script>
+
         <tr>
             <td>
 
