--- a/src_backend/PetCareAppMVC/Features/Signup/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Signup/Index.cshtml
@@ -1,7 +1,7 @@
 @model PetCareAppMVC.Features.Signup.SignupViewModel
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "signup Page";
 }
 
 <div>
