--- a/src_backend/PetCareAppMVC/Features/Shared/_Layout.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Shared/_Layout.cshtml
@@ -1,35 +1,42 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="hr_HR" xml:lang="hr_HR">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ProjectMVC</title>
-            <link rel="icon" type="image/x-icon" href="~/resources/favicon.ico">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Question review application - @ViewData["Title"]</title>
 
-            
-    @*<link asp-append-version="true" rel="stylesheet" href="~/styles/login.css" />*@
+  <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
+  <link rel="stylesheet" href="~/css/site.css" />
+  @RenderSection("styles", required: false)
 </head>
 <body>
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a class="navbar-brand" asp-action="Index" asp-controller="Home">Review Adlisting</a>
 
- 
-          @*<partial name="Navigation" />*@
-     <div>
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-          @RenderBody()
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <vc:navigation/>
+    </div>
+  </nav>
 
-     </div>
+  <main>
 
-         
- 
-@*  <script>
-    window.applicationBaseUrl = '@Url.Content("~/")';
-  </script>
-*@
-    @*<script asp-append-version="true" src="~/lib/jquery/jquery.min.js"></script>*@
-  @*<script asp-append-version="true" src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>  *@
-  @*<script asp-append-version="true" src="~/lib/toastr.js/toastr.min.js"></script>  *@
-  @*<script src="~/js/site.js" asp-append-version="true"></script>*@
-  @*<partial name="ShowMessage"/>*@
-  @*@await RenderSectionAsync("Scripts", required: false)*@
+    @RenderBody()
+  </main>
+  <hr />
+
+
+  <script src="~/lib/jquery/jquery.js"></script>
+  <script src="~/lib/bpmn-js/dist/bpmn-navigated-viewer.production.min.js"></script>
+  <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+  @*  <script src="~/js/site.js" asp-append-version="true"></script>*@
+
+
+  @RenderSection("scripts", required: false)
 </body>
 </html>
